<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">联大健康</string>
    <string name="start">开启</string>
    <string name="stop">关闭服务</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="login">登陆</string>
    <string name="regist">注册</string>
    <string name="sure">确定</string>
    <string name="title_activity_step_counter">StepCounter</string>
    <string name="title_activity_accelerometer">AccelerometerActivity</string>
    <string name="testSensor">传感器测试</string>
    <string name="title_activity_regist">RegistActivity</string>
    <string name="edNumber">学号:</string>
    <string name="edEmail">邮箱:</string>
    <string name="edPassword">密码:</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="student">学生</string>
    <string name="teacher">老师</string>
    <string name="logo">logo</string>
    <string name="back">返回</string>
    <string name="visitor">游客</string>
    <string name="title_activity_self_setting">SelfSettingActivity</string>
    <string name="className">班级</string>
    <string name="userName">姓名</string>
    <string name="sex">性别</string>
    <string name="tall">身高</string>
    <string name="fat">体重</string>
    <string name="setpGoal">达标步数</string>
    <string name="selfDetail">个人信息页</string>
    <string name="devName">开发者姓名</string>
    <string name="devClass">开发者班</string>
    <string name="defaultstep">10000步</string>
    <string name="selfStepGoal">个人目标步数</string>
    <string name="title_activity_setp_today">SetpTodayActivity</string>
    <string name="countToday">今日统计</string>
    <string name="stepCount">步数</string>
    <string name="km">里程</string>
    <string name="burned">消耗</string>
    <string name="headImg">头部图片</string>
    <string name="title_activity_settings">SettingsActivity</string>
    
    
    
    <string name="menu_settings">设置</string>
    <string name="step_number">步\t数</string>
    <string name="use_time">用\t时</string>
    <string name="distance">行 程</string>
    <string name="calories">热 量</string>
    <string name="velocity">速 度</string>
    <string name="zero">0</string>
    <string name="double_zero">0.0</string>
    <string name="calories_zero">0.0</string>
    <string name="velocity_zero">0.0</string>
    <string name="calorie">卡路里</string>
    <string name="kilometer_per_hour">m/s</string>
    <string name="pause">暂停</string>
    <string name="cancel">清零</string>
    <string name="daily">今日累积</string>
    <string name="image_star">image_star</string>
    <string name="sunday">星期天</string>
    <string name="monday">星期一</string>
    <string name="tuesday">星期二</string>
    <string name="wednesday">星期三</string>
    <string name="thursday">星期四</string>
    <string name="friday">星期五</string>
    <string name="saturday">星期六</string>
    <string name="month">月\t</string>
    <string name="day">日</string>
    <string name="todo">TODO</string>
    <string name="information">说明</string>
    <string name="settings_title">设置</string>
    <string name="sensitivity">灵敏度：</string>
    <string name="low">低</string>
    <string name="high">高</string>
    <string name="sensitivity_info">灵敏度越高,对身体的动作越敏感.请调节灵敏度来适应不同的体形,路面等因素.</string>
    <string name="step_length">步长:</string>
    <string name="cm">厘米</string>
    <string name="setp_length_info_1">为估算行走的距离和速度，请输入步长</string>
    <string name="setp_length_info_2">(得出的速度和距离较为粗略，仅供参考)</string>
    <string name="weigth">体重:</string>
    <string name="kg">公斤</string>
    <string name="weight_info">为计算消耗的热量(卡路里)，请入体重。</string>
    <string name="save">保存</string>
    <string name="cancle">取消</string>
    <string name="endtime">结束时间</string>
    <string name="starttime">开始时间</string>
    <string name="deleterecord">删除选中记录</string>
    <string name="go">走起！！！</string>
    <string name="showScore">查看战绩</string>
    
    
    
    
    
    
    

</resources>