<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SetpTodayActivity" >

    <LinearLayout
        android:id="@+id/headImg"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:background="@drawable/headbg"
        android:orientation="vertical" >
    </LinearLayout>

    <LinearLayout
        android:id="@+id/headButtom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/headImg" >

        <Button
            android:id="@+id/btDelete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/deleterecord" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/headButtom" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/starttime" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/endtime" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
             android:textColor="#ff0000"
            android:text="@string/stepCount" />
    </LinearLayout>

    <ListView
        android:id="@+id/lvRecord"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/linearLayout1" >
    </ListView>

</RelativeLayout>