<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StepActivity" >

    <LinearLayout
        android:id="@+id/show_step_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginBottom="5dip"
        android:layout_marginLeft="15dip"
        android:layout_marginRight="15dip"
        android:layout_marginTop="5dip"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dip"
            android:layout_marginTop="5dip"
            android:baselineAligned="false"
            android:background="@drawable/shape"
            android:orientation="horizontal"
            android:paddingBottom="15dip"
            android:paddingTop="15dip"
            android:weightSum="2" >

            <RelativeLayout
                android:layout_width="0dip"
                android:layout_height="fill_parent"
                android:layout_marginLeft="60dip"
                android:layout_weight="1" >


                <TextView
                    android:id="@+id/step_counter"
                    style="@style/small_text_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/step_number" />

                <TextView
                    android:id="@+id/show_step"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/step_counter"
                    android:layout_marginTop="10dip"
                    android:textColor="@android:color/white"
                    android:text=""
                    android:textSize="55sp" />
            </RelativeLayout>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/btn_row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dip"
            android:layout_marginRight="15dip"
            android:layout_marginTop="5dip" >

            <Button
                android:id="@+id/start"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dip"
                android:layout_weight="1"
                android:background="@drawable/btn_bg"
                android:onClick="onClick"
                android:padding="5dip"
                android:text="@string/start"
                android:textColor="@android:color/white"
                android:textSize="25sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/stop"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dip"
                android:layout_weight="1"
                android:background="@drawable/btn_bg"
                android:onClick="onClick"
                android:padding="5dip"
                android:text="@string/pause"
                android:textColor="@android:color/white"
                android:textSize="25sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/show_step_row"
        android:layout_centerHorizontal="true"
        android:textSize="40sp"
        android:text="@string/go" />

    <Button
        android:id="@+id/btShowScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/show_step_row"
        android:layout_below="@+id/show_step_row"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="44dp"
        android:background="@drawable/showscore"
        android:padding="5dip"
        android:text="@string/showScore"
        android:textSize="25sp"
        android:textStyle="bold" />

</RelativeLayout>